--- a/wetin/src/components/BarraPesquisa/BarraPesquisa.module.css
+++ b/wetin/src/components/BarraPesquisa/BarraPesquisa.module.css
@@ -57,6 +57,7 @@
     overflow-y: auto;
     z-index: 1000;
     margin-top: 8px;
+    box-shadow: 0px 15px 4px 0px rgba(0, 0, 0, 0.00), 0px 9px 4px 0px rgba(0, 0, 0, 0.01), 0px 5px 3px 0px rgba(0, 0, 0, 0.05), 0px 2px 2px 0px rgba(0, 0, 0, 0.09), 0px 1px 1px 0px rgba(0, 0, 0, 0.10);
 }
 
 .history-item {
