--- a/wetin/src/components/PopUps/PopUpSuccess/PopUpSuccess.module.css
+++ b/wetin/src/components/PopUps/PopUpSuccess/PopUpSuccess.module.css
@@ -40,6 +40,6 @@
     margin-bottom: 72px;
 }
 .imagem-pop-up{
-    width: 560px;
-    height: 480px;
+    max-width: 100%;
+    height: 400px;
 }   
