--- a/wetin/src/pages/Dashboard/EditarVaga/EditarVaga.module.css
+++ b/wetin/src/pages/Dashboard/EditarVaga/EditarVaga.module.css
@@ -56,16 +56,17 @@
 
 .labelDiv{
     color: #000000;
-    width: 80%;
+    width: 100%;
     font-weight: 700;
-    font-size: 1rem;
+    font-size: 1.1rem;
     display: flex;
+    flex-direction: column;
     gap: 5px;
 }
 
 .labelDiv span{
     color: red;
-    display: none;
+    font-size: 0.5rem;
 }
 
 .input{
