--- a/wetin/src/pages/Login/CriarSenha/criarSenha.module.css
+++ b/wetin/src/pages/Login/CriarSenha/criarSenha.module.css
@@ -49,3 +49,64 @@
     height: 30vh;
     justify-content: space-around;
 }
+
+.inputSenha {
+    display: flex;
+    flex-direction: column;
+    height: 15vh;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.inputSenha label {
+    color: #025373;
+    font-weight: 700;
+    font-size: 1.3rem;
+}
+
+.inputSenha img{
+    cursor: pointer;
+} 
+
+.inputLoginSenha {
+    height: 6vh;
+    border-radius: 5px;
+    border: none;
+    font-size: 1rem;
+    padding-left: 2%;
+    width: 85%;
+}   
+
+.input{
+    display: flex;
+    background: #E2E2E2;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
+    width: 100%;
+    height: 6vh;
+    justify-content: center;
+    border-radius: 5px;
+}
+
+.divImg{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 6vh;
+    width: 10%;
+}
+
+input{
+    all: unset;
+    color: black;
+}
+
+.msgEsquecerSenha{
+    color: black;
+    font-size: smaller;
+    font-weight: 500;
+    display: flex;
+    width: 100%;
+    flex-direction: row-reverse;
+    margin-top: 1%;
+    cursor: pointer;
+}
