--- a/wetin/src/pages/Login/CriarSenha/criarSenha.module.css
+++ b/wetin/src/pages/Login/CriarSenha/criarSenha.module.css
@@ -53,7 +53,7 @@
 .inputSenha {
     display: flex;
     flex-direction: column;
-    height: 15vh;
+    height: 11vh;
     width: 100%;
     justify-content: space-between;
 }
@@ -108,5 +108,24 @@ input{
     width: 100%;
     flex-direction: row-reverse;
     margin-top: 1%;
+    cursor: pointer;
+}
+
+.btLogin{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btLogin button{
+    border: none;
+    border-radius: 20px;
+    background-color: #025373;
+    height: 8vh;
+    color: #F2F2F2;
+    font-weight: 600;
+    font-size: 20px;
+    padding: 0 8% 0 8%;
     cursor: pointer;
 }
