--- a/wetin/src/pages/Dashboard/PerfilCandidato/PerfilCandidato.module.css
+++ b/wetin/src/pages/Dashboard/PerfilCandidato/PerfilCandidato.module.css
@@ -20,12 +20,20 @@
     height: 200px;
     border-radius: 20px;
     overflow: hidden;
+    box-sizing: border-box;
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
 }
 
 .foto-candidato {
-    width: 100%;
-    max-width: 100%;
-}
+    max-height: 100%;
+    width: auto;
+    height: 200px;
+    object-position: center;
+    object-fit: cover;
+}    
+
 
 .caixa-perfil::-webkit-scrollbar {
     width: 0.5em;
@@ -139,7 +147,7 @@
 }
 
 .icone {
-    width: 25px;
+    max-width: 100%;
     height: 25px;
 }
 
