--- a/wetin/src/pages/Dashboard/PublicarVaga/PublicarVaga.module.css
+++ b/wetin/src/pages/Dashboard/PublicarVaga/PublicarVaga.module.css
@@ -1,5 +1,5 @@
 .titulo{
-    width: 90%;
+    width: 100%;
     height: 10vh;
     display: flex;
     justify-content: space-between;
@@ -12,7 +12,7 @@
     font-size: 1.7rem;
 }
 
-.titulo button{
+.titulo button, .botao_publicar{
     height: 6vh;
     width: 15vw;
     color: #fff;
@@ -24,51 +24,201 @@
     cursor: pointer;
 }
 
-.caixaFormulario{
-    background-color: #F2F2F2;
-    width: 90%;
-    height: 80vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+.textInput{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  width: 70%;
+  height: fit-content;
+  box-sizing: border-box;
+}
+
+.textInput label{
+  color: var(--100, #000);
+  font-feature-settings: 'liga' off, 'clig' off;
+  font-family: Quicksand;
+  font-size: var(--text_size_xs, 18.35px);
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.textInput span{
+  color: red;
+}
+
+.textInput input {
+  width: 100%;
+  padding: 16px;
+  border-radius: 10px;
+  background: var(--95, #F2F2F2);
+  box-shadow: 0px 0.8px 3px 1px rgba(0, 0, 0, 0.12);
+}
+
+.textInput textarea {
+  width: 100%;
+  min-height: 240px;
+  padding: 16px;
+  border-radius: 10px;
+  background: var(--95, #F2F2F2);
+  box-shadow: 0px 0.8px 3px 1px rgba(0, 0, 0, 0.12);
+  border: none;
+  font-size: var(--text_size_xs, 16px);
+  line-height: normal;
+}
+
+.textInputSalario{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  width: 70%;
+  height: fit-content;
+  box-sizing: border-box;
+}
+
+.textInputSalario label{
+  color: var(--100, #000);
+  font-feature-settings: 'liga' off, 'clig' off;
+  font-family: Quicksand;
+  font-size: var(--text_size_xs, 18.35px);
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.textInputSalario span{
+  color: red;
+}
+
+.textInputSalario input{
+  width: 20%;
+  padding: 16px;
+  margin: 0px 32px 0px 0px;
+  border-radius: 10px;
+  background: var(--95, #F2F2F2);
+  box-shadow: 0px 0.8px 3px 1px rgba(0, 0, 0, 0.12);
 }
 
 
-.formVaga{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: flex-start;
-    margin-left: 10px;
-    height: 70vh;
-    width: 100%;
-    overflow-y: scroll;
-    gap: 15px;
+
+.textInputCep{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  width: 20%;
+  height: fit-content;
+  box-sizing: border-box;
 }
 
-.InputDiv{
-    display: flex;
-    width: 40%;
-    flex-direction: column;
+.textInputCep label{
+  color: var(--100, #000);
+  font-feature-settings: 'liga' off, 'clig' off;
+  font-family: Quicksand;
+  font-size: var(--text_size_xs, 18.35px);
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
 }
 
-.labelDiv{
-    color: #000000;
-    width: 80%;
-    font-weight: 700;
-    font-size: 1rem;
-    display: flex;
-    gap: 5px;
+.textInputCep span{
+  color: red;
 }
 
-.labelDiv span{
-    color: red;
-    display: none;
+.textInputCep input {
+  width: 100%;
+  padding: 16px;
+  border-radius: 10px;
+  background: var(--95, #F2F2F2);
+  box-shadow: 0px 0.8px 3px 1px rgba(0, 0, 0, 0.12);
 }
 
-.input{
-    background: #e2e2e200;
-    border-radius: 5px;
-    height: 6vh;
-    padding-left:1%;
+.select_containers{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 64px;
+}
+
+.select_box{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  width: 22%;
+  height: fit-content;
+  box-sizing: border-box;
+}
+
+.select_box span{
+  color: red;
+}
+
+.select_box label{
+  color: var(--100, #000);
+  font-feature-settings: 'liga' off, 'clig' off;
+  font-family: Quicksand;
+  font-size: var(--text_size_xs, 18.35px);
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.select_box select{
+  flex: 1;
+  padding: 16px;
+  border-radius: 10px;
+  background: var(--95, #F2F2F2);
+  box-shadow: 0px 0.8px 3px 1px rgba(0, 0, 0, 0.12);
+  border: none;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.button_box{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 64px;
+}
+
+.caixa-vagas {
+  display: flex;
+  flex-direction: column;
+  height: calc(100vh - 96px);
+  padding: 0px 6px 67px 0px;
+  border-radius: 20px;
+  background: var(--95, #F2F2F2);
+  box-shadow: 0px 87px 24px 0px rgba(0, 0, 0, 0.00), 0px 56px 22px 0px rgba(0, 0, 0, 0.01), 0px 31px 19px 0px rgba(0, 0, 0, 0.05), 0px 14px 14px 0px rgba(0, 0, 0, 0.09), 0px 3px 8px 0px rgba(0, 0, 0, 0.10);
+  margin: 0px 8px 8px 0px;
+  padding: 24px;
+  box-sizing: border-box;
+  z-index: 1;
+  flex: 1;
+}
+.caixa-vagas{
+  scroll-padding: 20px;
+}
+
+.caixa-vagas h3 {
+  color: #000;
+  font-size: 18.35px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
+  margin-bottom: 24px;
+  /* 108.992% */
+}
+
+.formulario{
+  display: flex;
+  flex-direction: column;
+  justify-content: right;
+  align-items: baseline;
+  overflow-y: scroll;
+  padding: 8px;
+  flex: 1;
+  height: 100%;
+  gap: 16px;
 }
